2009-11-19  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Fix LIBGNOMEUI related variable substitution. Make
	it buildable with recent versions of libgnomeui.

2009-11-15  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/status-icon.c, src/menucmd.c: Add ability to hide main
	window by right clicking the status icon. Thanks Kip Warner for
	the patch.

2009-09-17  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_visible_columns):
	Check that the column_references tree is not NULL before calling
	g_tree_destroy.

2009-09-14  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/projects-tree.c (gtt_projects_tree_set_expander_state):
	return without any further processing if states is NULL.

	* src/file-io.c (gtt_post_ctree_config): don't call
	gtt_projects_tree_set_expander_state when the expander state is
	NULL.

2009-06-29  Goedson Teixeira Paixao  <goedson@debian.org>

	* ghtml/C/gtt.scm: Set unlimited guile stack (Fixes #1402562)

	* src/ghtml.c (gtt_ghtml_new): properly initialize guile
	environment.

2009-05-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c (task_get_blocktime_str_scm): substitute the usage
	of the deprecated qof_print_hors_elapsed_buff by our copy of it.

2009-05-09  Goedson Teixeira Paixao  <goedson@debian.org>

	* configure.in: Look for qof.pc (libqof2) instead of
	qof-1.pc.

2009-01-02  Goedson Teixeira Paixao  <goedson@debian.org>

	* glade/interval_edit.glade: add the DISPLAY_SECONDS flag to the
	start_date field.

2008-11-28  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/idle-dialog.c (show_idle_dialog): mark the idle dialog as
       visible before stopping the project timer so we don't start the no
       project timeout timer when it's not needed.


2008-11-27  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/timer.c (start_no_project_timer): Fixed the condition in which
	the "No project" timer is started.
