@@ -1,3 +1,8 @@
+2009-11-20  Goedson Teixeira Paixao  <goedson@debian.org>
+
+	* src/log.c (printf_project): Added option to log the current
+	diary entry (Patch #1984744). Thanks Matt Simmons for the patch.
+
 2009-11-19  Goedson Teixeira Paixao  <goedson@debian.org>
 
 	* configure.in: Fix LIBGNOMEUI related variable substitution. Make
